# weston-webruntime-modules

./: CMakeLists.txt  config.h.in
ivi-shell-webruntime-ui/: CMakeLists.txt  ivi-shell-webruntime-ui.c
ivi-webruntime-ui-controller/: CMakeLists.txt  ivi-webruntime-ui-controller.c
protocol/: CMakeLists.txt
shared/: CMakeLists.txt
